--- a/semualomba.html
+++ b/semualomba.html
@@ -69,11 +69,11 @@
               <nav class="main_menu navbar navbar-expand-lg">
                 <div class="main_menu_inner collapse navbar-collapse justify-content-center" id="main_menu_dropdown">
                   <ul class="main_menu_list unordered_list_center">
-                    <li><a class="nav-link" href="index_2.html">Home</a></li>
-                    <li><a class="nav-link" href="index_2.html">Info</a></li>                   
-                    <li><a class="nav-link" href="index_2.html">About</a></li>
-                    <li><a class="nav-link" href="index_2.html">F.A.Q</a></li>
-                    <li><a class="nav-link" href="index_2.html">Contact</a></li>
+                    <li><a class="nav-link" href="index_2.html">Beranda</a></li>
+                    <li><a class="nav-link" href="index_2.html">Kategori</a></li>                   
+                    <li><a class="nav-link" href="index_2.html">Tentang</a></li>
+                    <li><a class="nav-link" href="index_2.html">FAQ</a></li>
+                    <li><a class="nav-link" href="index_2.html">Kontak</a></li>
                   </ul>
                 </div>
               </nav>
@@ -128,7 +128,7 @@
         <section class="courses_archive_section section_space_lg">
           <div class="container">
             <div class="filter_topbar">
-              <p class="filter_result">Showing <span>1-7</span> of <span>7</span> results</p>
+              <p class="filter_result">Showing <span>1-6</span> of <span>6</span> results</p>
             </div>
             <div class="row">
               <div class="col col-lg-4">
@@ -153,7 +153,7 @@
                     </ul>
                     <h3 class="item_title">
                       <a href="lomba.html">
-                        Lomba Nachrtitten Lesen
+                        Nachriten Lesen Siswa
                       </a>
                     </h3>
                     <a class="btn_unfill" href="lomba.html">
@@ -189,7 +189,7 @@
                     </ul>
                     <h3 class="item_title">
                       <a href="lomba1.html">
-                        Lomba Deutschekenntnisse
+                        Nachriten Lesen Mahasiswa
                       </a>
                     </h3>
                     <a class="btn_unfill" href="lomba1.html">
@@ -225,7 +225,7 @@
                     </ul>
                     <h3 class="item_title">
                       <a href="lomba2.html">
-                        Lomba Marchen Erzahlen
+                        Märchen Erzählen Siswa
                       </a>
                     </h3>
                     <a class="btn_unfill" href="lomba2.html">
@@ -261,7 +261,8 @@
                     </ul>
                     <h3 class="item_title">
                       <a href="lomba3.html">
-                        Lomba Nachrtitten Lesen
+                        Deutschkenntnisse Siswa
+
                       </a>
                     </h3>
                     <a class="btn_unfill" href="lomba3.html">
@@ -297,7 +298,7 @@
                     </ul>
                     <h3 class="item_title">
                       <a href="lomba4.html">
-                        Lomba Deutschekenntnisse
+                        Deutschkenntnisse Mahasiswa
                       </a>
                     </h3>
                     <a class="btn_unfill" href="lomba4.html">
@@ -333,7 +334,7 @@
                     </ul>
                     <h3 class="item_title">
                       <a href="lomba5.html">
-                        Lomba Singen
+                        Fotografi
                       </a>
                     </h3>
                     <a class="btn_unfill" href="lomba5.html">
@@ -345,44 +346,7 @@
                     </a>
                   </div>
                 </div>
-              </div>
-
-              <div class="col col-lg-4">
-                <div class="course_card">
-                  <div class="item_image">
-                    <a href="lomba6.html" data-cursor-text="View">
-                      <img src="assets/images/lomba/Juklak Lomba Umum .png" alt="Collab – Online Learning Platform">
-                    </a>
-                  </div>
-                  <div class="item_content">
-                    <div class="d-flex align-items-center justify-content-between mb-3">
-                    </div>
-                    <ul class="meta_info_list unordered_list">
-                      <li>
-                        <i class="fas fa-chart-bar"></i>
-                        <span>Umum</span>
-                      </li>
-                      <li>
-                        <i class="fas fa-clock"></i>
-                        <span>Online</span>
-                      </li>
-                    </ul>
-                    <h3 class="item_title">
-                      <a href="lomba6.html">
-                        Lomba Musikalisasi Puisi
-                      </a>
-                    </h3>
-                    <a class="btn_unfill" href="lomba6.html">
-                      <span class="btn_text">Daftar </span>
-                      <span class="btn_icon">
-                        <i class="fas fa-long-arrow-right"></i>
-                        <i class="fas fa-long-arrow-right"></i>
-                      </span>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
+              </div>  
 
             <div class="pagination_wrap">
               <ul class="pagination_nav unordered_list">
