--- a/lomba4.html
+++ b/lomba4.html
@@ -68,11 +68,11 @@
               <nav class="main_menu navbar navbar-expand-lg">
                 <div class="main_menu_inner collapse navbar-collapse justify-content-center" id="main_menu_dropdown">
                   <ul class="main_menu_list unordered_list_center">
-                    <li><a class="nav-link" href="index_2.html">Home</a></li>
-                    <li><a class="nav-link" href="index_2.html">Info</a></li>                   
-                    <li><a class="nav-link" href="index_2.html">About</a></li>
-                    <li><a class="nav-link" href="index_2.html">F.A.Q</a></li>
-                    <li><a class="nav-link" href="index_2.html">Contact</a></li>
+                    <li><a class="nav-link" href="index_2.html">Beranda</a></li>
+                    <li><a class="nav-link" href="index_2.html">Kategori</a></li>                   
+                    <li><a class="nav-link" href="index_2.html">Tentang</a></li>
+                    <li><a class="nav-link" href="index_2.html">FAQ</a></li>
+                    <li><a class="nav-link" href="index_2.html">Kontak</a></li>
                   </ul>
                 </div>
               </nav>
@@ -104,12 +104,12 @@
               <div class="row align-items-center">
                 <div class="col col-lg-7">
                   <ul class="breadcrumb_nav unordered_list">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Beranda</a></li>
                     <li> Lomba</li>
-                    <li>Deutschkenntnisse</li>
+                    <li>Deutschkenntnisse Mahasiswa</li>
                   </ul>
                   <h1 class="page_title">
-                    Lomba Deutschkenntnisse
+                    Deutschkenntnisse Mahasiswa
                   </h1>
                   <ul class="meta_info_list unordered_list">
                     <li>
@@ -168,7 +168,7 @@
                     <li>
                       <i class="fas fa-check"></i>
                       <span>
-                        Deutschkenntnisse merupakan lomba yang bertujuan untuk menguji kemampuan dan pengetahuan siswa dalam berbahasa Jerman. Tingkat kesulitan dalam lomba ini menggunakan standar B1. Lomba dilaksanakan secara daring melalui Zoom Meeting dan web Deutsche Woche XXVIII.
+                        Tes pengetahuan bahasa Jerman untuk mahasiswa.
                       </span>
                     </li>
                   </ul>
