--- a/semualomba.html
+++ b/semualomba.html
@@ -364,82 +364,86 @@
 
       <!-- Site Footer - Start
       ================================================== -->
-      <footer class="site_footer">
-        <div class="footer_widget_area">
-          <div class="container">
-            <div class="row">
-              <div class="col col-lg-3 col-md-6 col-sm-6">
-                <div class="footer_widget">
-                  <div class="site_logo">
-                    <a class="site_link" href="index.html">
-                      <img src="assets/images/logo/site_logo-02.png" alt="Collab - Online Learning Platform">
-                    </a>
-                  </div>
-                  <p>
-                    Deutsche Woche XXVIII dengan tema “Sprache als Ausdrucksmittel” yang artinya “Bahasa sebagai Sarana untuk Berekspresi”.
-                  </p> 
-                  <ul class="social_links unordered_list">
-                  
-                    <li>
-                      <a href="#!"><i class="fab fa-instagram"></i></a>
-                    </li>
-                  </ul>
-                </div>
+<footer class="site_footer">
+    <div class="footer_widget_area">
+      <div class="container">
+        <div class="row">
+          <div class="col col-lg-3 col-md-6 col-sm-6">
+            <div class="footer_widget">
+              <div class="site_logo">
+                <a class="site_link" href="index.html">
+                  <img src="assets/images/logo/desain2.png" alt="Collab - Online Learning Platform">
+                </a>
               </div>
-                <div class="col col-lg-6">
-                </div>
-                <div class="col col-lg-3 col-md-6 col-sm-6">
-                  <div class="footer_widget">
-                      <h3 class="footer_widget_title">Our Team</h3>
-                      <ul class="blog_small_group unordered_list_block">
-                          <li>
-                              <a class="blog_small">
-                                  <span class="item_image">
-                                      <img src="assets\images\team\iqbal.jpg" alt="Collab – Online Learning Platform">
-                                  </span>
-                                  <span class="item_content">
-                                      <strong class="item_title">Iqbal Al Batmi</strong>
-                                      <small class="item_post_date">Front End Web developer</small>
-                                      <!-- Social icons placed below the title -->
-                                      <span class="item_social_icons social_links ">
-                                          <a href="https://x.com/elbatmee" target="_blank"><i class="fab fa-twitter"></i></a>
-                                          <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                                          <a href="https://www.instagram.com/ibbat.alqalmi" target="_blank"><i class="fab fa-instagram"></i></a>
-                                      </span>
-                                  </span>
-                              </a>
-                          </li>
-                          <li>
-                              <a class="blog_small" >
-                                  <span class="item_image">
-                                      <img src="assets/images/team/rama.jpg" alt="Collab – Online Learning Platform">
-                                  </span>
-                                  <span class="item_content">
-                                      <strong class="item_title">Ramadhani Rizky </strong>
-                                      <small class="item_post_date">Front End Web developer</small>
-                                      <!-- Social icons placed below the title -->
-                                      <span class="item_social_icons">
-                                          <a href="https://www.linkedin.com/in/ramadhani-rizky/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                                          <a href="https://www.instagram.com/r.rizky.s/" target="_blank"><i class="fab fa-instagram"></i></a>
-                                      </span>
-                                  </span>
-                              </a>
-                          </li>
-                      </ul>
-                  </div>
-              </div>
-              
+              <p>
+                Deutsche Woche XXIX dengan tema “Brücke der Sprache, Bühne der Kreativität” yang berarti “Jembatan
+                Bahasa, Panggung Kreativitas”.
+              </p>
+              <ul class="social_links unordered_list">
+
+                <li>
+                  <a href="https://www.instagram.com/dwunesa?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fab fa-instagram"></i></a>
+                </li>
+              </ul>
             </div>
           </div>
-        </div>
-        <div class="copyright_widget">
-          <div class="container">
-            <p class="copyright_text text-center mb-0">
-              DW UNESA</a> © All rights reserved 2024
-            </p>
+          <div class="col col-lg-6">
           </div>
+          <div class="col col-lg-3 col-md-6 col-sm-6">
+            <div class="footer_widget">
+              <h3 class="footer_widget_title">Our Team</h3>
+              <ul class="blog_small_group unordered_list_block">
+                <li>
+                  <a class="blog_small">
+                    <span class="item_image">
+                      <img src="assets\images\team\iqbal.jpg" alt="Collab – Online Learning Platform">
+                    </span>
+                    <span class="item_content">
+                      <strong class="item_title">Iqbal Al Batmi</strong>
+                      <small class="item_post_date">Front End Web developer</small>
+                      <!-- Social icons placed below the title -->
+                      <span class="item_social_icons social_links ">
+                        <a href="https://x.com/elbatmee" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.instagram.com/ibbat.alqalmi" target="_blank"><i
+                            class="fab fa-instagram"></i></a>
+                      </span>
+                    </span>
+                  </a>
+                </li>
+                <li>
+                  <a class="blog_small">
+                    <span class="item_image">
+                      <img src="assets/images/team/rama.jpg" alt="Collab – Online Learning Platform">
+                    </span>
+                    <span class="item_content">
+                      <strong class="item_title">Ramadhani Rizky </strong>
+                      <small class="item_post_date">Front End Web developer</small>
+                      <!-- Social icons placed below the title -->
+                      <span class="item_social_icons">
+                        <a href="https://www.linkedin.com/in/ramadhani-rizky/" target="_blank"><i
+                            class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.instagram.com/r.rizky.s/" target="_blank"><i
+                            class="fab fa-instagram"></i></a>
+                      </span>
+                    </span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
         </div>
-      </footer>
+      </div>
+    </div>
+    <div class="copyright_widget">
+      <div class="container">
+        <p class="copyright_text text-center mb-0">
+          DW UNESA</a> © All rights reserved 2025
+        </p>
+      </div>
+    </div>
+  </footer>
       <!-- Site Footer - End
       ================================================== -->
 
