--- a/index_2.html
+++ b/index_2.html
@@ -683,12 +683,17 @@
               </div>
               <div class="iconbox_item contact_info_iconbox">
                 <div class="item_icon">
-                  <i class="fas fa-phone"></i>
+                  <a href="https://wa.me/6285745314314" target="_blank" class="wa_icon">
+                    <i class="fas fa-phone"></i>
+                  </a>
                 </div>
                 <div class="item_content">
-                  <h3 class="item_title">Call Us</h3>
-                  <p class="mb-0">Humas - Ayu (085745314314) </p>
-
+                  <h3 class="item_title">
+                    <a href="https://wa.me/6285745314314" target="_blank" class="wa_title">
+                      Call Us
+                    </a>
+                  </h3>
+                  <p class="mb-0">Humas - Ayu (085745314314)</p>
                 </div>
               </div>
               <div class="iconbox_item contact_info_iconbox">
@@ -817,16 +822,17 @@
             <div class="footer_widget">
               <div class="site_logo">
                 <a class="site_link" href="index.html">
-                  <img src="assets/images/logo/desain.png" alt="Collab - Online Learning Platform">
+                  <img src="assets/images/logo/desain2.png" alt="Collab - Online Learning Platform">
                 </a>
               </div>
               <p>
-                Deutsche Woche XXIX dengan tema “Brücke der Sprache, Bühne der Kreativität” yang berarti “Jembatan Bahasa, Panggung Kreativitas”.
+                Deutsche Woche XXIX dengan tema “Brücke der Sprache, Bühne der Kreativität” yang berarti “Jembatan
+                Bahasa, Panggung Kreativitas”.
               </p>
               <ul class="social_links unordered_list">
 
                 <li>
-                  <a href="#!"><i class="fab fa-instagram"></i></a>
+                  <a href="https://www.instagram.com/dwunesa?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fab fa-instagram"></i></a>
                 </li>
               </ul>
             </div>
@@ -883,7 +889,7 @@
     <div class="copyright_widget">
       <div class="container">
         <p class="copyright_text text-center mb-0">
-          DW UNESA</a> © All rights reserved 2024
+          DW UNESA</a> © All rights reserved 2025
         </p>
       </div>
     </div>
