--- a/lomba1.html
+++ b/lomba1.html
@@ -124,7 +124,7 @@
                 </ul>
                 <ul class="btns_group unordered_list">
                   <li>
-                    <a href="pricing.html" class="btn btn_dark">
+                    <a href="https://unesa.me/LombaDWXXIX" class="btn btn_dark">
                       <span>
                         <small>Daftar</small>
                         <small>Daftar</small>
@@ -248,17 +248,19 @@
                 <div class="footer_widget">
                   <div class="site_logo">
                     <a class="site_link" href="index.html">
-                      <img src="assets/images/logo/site_logo-02.png" alt="Collab - Online Learning Platform">
+                      <img src="assets/images/logo/desain2.png" alt="Collab - Online Learning Platform">
                     </a>
                   </div>
                   <p>
-                    Deutsche Woche XXVIII dengan tema “Sprache als Ausdrucksmittel” yang artinya “Bahasa sebagai Sarana
-                    untuk Berekspresi”.
+                    Deutsche Woche XXIX dengan tema “Brücke der Sprache, Bühne der Kreativität” yang berarti “Jembatan
+                    Bahasa, Panggung Kreativitas”.
                   </p>
                   <ul class="social_links unordered_list">
 
                     <li>
-                      <a href="#!"><i class="fab fa-instagram"></i></a>
+                      <a
+                        href="https://www.instagram.com/dwunesa?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i
+                          class="fab fa-instagram"></i></a>
                     </li>
                   </ul>
                 </div>
@@ -315,7 +317,7 @@
         <div class="copyright_widget">
           <div class="container">
             <p class="copyright_text text-center mb-0">
-              DW UNESA</a> © All rights reserved 2024
+              DW UNESA</a> © All rights reserved 2025
             </p>
           </div>
         </div>
