--- a/index_2.html
+++ b/index_2.html
@@ -645,10 +645,10 @@
               </div>
               <div class="accordion-item">
                 <div class="accordion-button collapsed" role="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse_four" aria-expanded="false">
+                  data-bs-target="#collapse_five" aria-expanded="false">
                   Siapa yang bisa saya hubungi untuk menanyakan informasi lebih lanjut?
                 </div>
-                <div id="collapse_four" class="accordion-collapse collapse" data-bs-parent="#faq_accordion_1">
+                <div id="collapse_five" class="accordion-collapse collapse" data-bs-parent="#faq_accordion_1">
                   <div class="accordion-body">
                     <p class="mb-0">
                       Untuk informasi lebih lanjut mengenai Deutsche Woche XXIX akan disampaikan oleh panitia dari
