--- a/index_2.html
+++ b/index_2.html
@@ -645,10 +645,10 @@
               </div>
               <div class="accordion-item">
                 <div class="accordion-button collapsed" role="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapse_four" aria-expanded="false">
+                  data-bs-target="#collapse_five" aria-expanded="false">
                   Siapa yang bisa saya hubungi untuk menanyakan informasi lebih lanjut?
                 </div>
-                <div id="collapse_four" class="accordion-collapse collapse" data-bs-parent="#faq_accordion_1">
+                <div id="collapse_five" class="accordion-collapse collapse" data-bs-parent="#faq_accordion_1">
                   <div class="accordion-body">
                     <p class="mb-0">
                       Untuk informasi lebih lanjut mengenai Deutsche Woche XXIX akan disampaikan oleh panitia dari
@@ -689,7 +689,8 @@
                 </div>
                 <div class="item_content">
                   <h3 class="item_title">
-                    <a href="https://wa.me/6285745314314" target="_blank" class="wa_title">
+                    <a href="https://wa.me/6285745314314?text=Halo,%20saya%20mau%20tanya%20tentang%20Deutsche%20Woche
+" target="_blank" class="wa_title">
                       Call Us
                     </a>
                   </h3>
@@ -832,7 +833,9 @@
               <ul class="social_links unordered_list">
 
                 <li>
-                  <a href="https://www.instagram.com/dwunesa?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fab fa-instagram"></i></a>
+                  <a
+                    href="https://www.instagram.com/dwunesa?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i
+                      class="fab fa-instagram"></i></a>
                 </li>
               </ul>
             </div>
