--- a/index_2.html
+++ b/index_2.html
@@ -206,109 +206,54 @@
         <div class="row">
           <div class="col col-lg-4">
             <div class="course_card style_2">
-              <div class="item_image">
-                <a href="lomba.html" data-cursor-text="View">
-                  <img src="assets/images/lomba/Juklak NL Siswa .png" alt="Collab – Online Learning Platform">
-                </a>
-              </div>
+              <div class="item_image"> <a href="lomba.html" data-cursor-text="View"> <img
+                    src="assets/images/lomba/lomba1.png" alt="Collab – Online Learning Platform"> </a> </div>
               <div class="item_content">
                 <ul class="meta_info_list unordered_list">
-                  <li>
-                    <i class="fas fa-chart-bar"></i>
-                    <span>Siswa</span>
-                  </li>
-                  <li>
-                    <i class="fas fa-clock"></i>
-                    <span> Offline</span>
-                  </li>
+                  <li> <i class="fas fa-chart-bar"></i> <span>Siswa</span> </li>
+                  <li> <i class="fas fa-clock"></i> <span> Offline</span> </li>
                 </ul>
-                <h3 class="item_title">
-                  <a href="lomba.html">
-                    Nachriten Lesen Siswa
-                  </a>
-                </h3>
-                <a class="btn_unfill" href="lomba.html">
-                  <span class="btn_text">Daftar</span>
-                  <span class="btn_icon">
-                    <i class="fas fa-long-arrow-right"></i>
-                    <i class="fas fa-long-arrow-right"></i>
-                  </span>
-                </a>
+                <h3 class="item_title"> <a href="lomba.html"> Nachriten Lesen Siswa </a> </h3> <a class="btn_unfill"
+                  href="lomba.html"> <span class="btn_text">Daftar</span> <span class="btn_icon"> <i
+                      class="fas fa-long-arrow-right"></i> <i class="fas fa-long-arrow-right"></i> </span> </a>
               </div>
             </div>
           </div>
+
 
           <div class="col col-lg-4 filter-graphic">
             <div class="course_card style_2">
-              <div class="item_image">
-                <a href="lomba3.html" data-cursor-text="View">
-                  <img src="assets/images/lomba/Juklak DK Mahasiswa.png" alt="Collab – Online Learning Platform">
-                </a>
-              </div>
+              <div class="item_image"> <a href="lomba3.html" data-cursor-text="View"> <img
+                    src="assets/images/lomba/lomba2.png" alt="Collab – Online Learning Platform"></a> </div>
               <div class="item_content">
                 <ul class="meta_info_list unordered_list">
-                  <li>
-                    <i class="fas fa-chart-bar"></i>
-                    <span>Mahasiswa</span>
-                  </li>
-                  <li>
-                    <i class="fas fa-clock"></i>
-                    <span>Online</span>
-                  </li>
-                  <li>
-                  </li>
+                  <li> <i class="fas fa-chart-bar"></i> <span>Mahasiswa</span> </li>
+                  <li> <i class="fas fa-clock"></i> <span>Online</span> </li>
+                  <li> </li>
                 </ul>
-
-                <h3 class="item_title">
-                  <a href="lomba3.html">
-                    Nachriten Lesen Mahasiswa
-                  </a>
-                </h3>
-                <a class="btn_unfill" href="lomba3.html">
-                  <span class="btn_text">Daftar</span>
-                  <span class="btn_icon">
-                    <i class="fas fa-long-arrow-right"></i>
-                    <i class="fas fa-long-arrow-right"></i>
-                  </span>
-                </a>
+                <h3 class="item_title"> <a href="lomba3.html"> Nachriten Lesen Mahasiswa </a> </h3> <a
+                  class="btn_unfill" href="lomba3.html"> <span class="btn_text">Daftar</span> <span class="btn_icon"> <i
+                      class="fas fa-long-arrow-right"></i> <i class="fas fa-long-arrow-right"></i> </span> </a>
               </div>
             </div>
           </div>
-
           <div class="col col-lg-4 filter-web">
             <div class="course_card style_2">
-              <div class="item_image">
-                <a href="lomba6.html" data-cursor-text="View">
-                  <img src="assets/images/lomba/Juklak Lomba Umum .png" alt="Collab – Online Learning Platform">
-                </a>
-              </div>
+              <div class="item_image"> <a href="lomba6.html" data-cursor-text="View"><img
+                    src="assets/images/lomba/lomba3.png" alt="Collab – Online Learning Platform"> </a> </div>
               <div class="item_content">
                 <ul class="meta_info_list unordered_list">
-                  <li>
-                    <i class="fas fa-chart-bar"></i>
-                    <span>Umum</span>
-                  </li>
-                  <li>
-                    <i class="fas fa-clock"></i>
-                    <span>Online</span>
-                  </li>
+                  <li> <i class="fas fa-chart-bar"></i> <span>Umum</span> </li>
+                  <li> <i class="fas fa-clock"></i> <span>Online</span> </li>
                 </ul>
-                <h3 class="item_title">
-                  <a href="lomba6.html">
-                    Märchen Erzählen Siswa
-                  </a>
-                </h3>
-                <a class="btn_unfill" href="lomba6.html">
-                  <span class="btn_text">Daftar</span>
-                  <span class="btn_icon">
-                    <i class="fas fa-long-arrow-right"></i>
-                    <i class="fas fa-long-arrow-right"></i>
-                  </span>
-                </a>
+                <h3 class="item_title"> <a href="lomba6.html"> Märchen Erzählen Siswa </a> </h3> <a class="btn_unfill"
+                  href="lomba6.html"> <span class="btn_text">Daftar</span> <span class="btn_icon"> <i
+                      class="fas fa-long-arrow-right"></i> <i class="fas fa-long-arrow-right"></i> </span> </a>
               </div>
             </div>
           </div>
         </div>
+
 
         <div class="btn_wrap d-block d-lg-none pb-0 text-center">
           <a class="btn border_dark" href="semualomba.html">
@@ -318,6 +263,7 @@
             </span>
           </a>
         </div>
+      </div>
       </div>
     </section>
   </section>
@@ -337,8 +283,8 @@
         </div>
         <div class="intro_video">
           <div class="video_wrap tilt">
-            <img src="assets/images/video/trailer.jpg" alt="Collab – Online Learning Platform">
-            <a class="video_play_btn popup_video" href="assets/images/video/unesaa.mp4">
+            <img src="assets/images/video/jpg.jpg" alt="Collab – Online Learning Platform">
+            <a class="video_play_btn popup_video" href="assets/images/video/unesafiks.mp4">
               <span class="icon"><i class="fas fa-play"></i></span>
             </a>
           </div>
@@ -683,7 +629,8 @@
               </div>
               <div class="iconbox_item contact_info_iconbox">
                 <div class="item_icon">
-                  <a href="https://wa.me/6285745314314" target="_blank" class="wa_icon">
+                  <a href="https://wa.me/6285745314314?text=Halo,%20saya%20mau%20tanya%20tentang%20Deutsche%20Woche
+" target="_blank" class="wa_icon">
                     <i class="fas fa-phone"></i>
                   </a>
                 </div>
