--- a/lomba4.html
+++ b/lomba4.html
@@ -144,7 +144,7 @@
               </div>
               <div class="col col-lg-5">
                 <div class="image_widget page_banner_image">
-                  <img src="assets/images/lomba/Juklak DK Mahasiswa.png" alt="Collab – Online Learning Platform">
+                  <img src="assets/images/lomba/lomba5.png" alt="Collab – Online Learning Platform">
                 </div>
               </div>
             </div>
@@ -170,7 +170,10 @@
                   <li>
                     <i class="fas fa-check"></i>
                     <span>
-                      Tes pengetahuan bahasa Jerman untuk mahasiswa.
+                      Deutschkenntnisse merupakan lomba yang bertujuan untuk menguji kemampuan dan siswa dalam berbahasa
+                      Jerman. Tingkat kesulitan dalam lomba ini menggunakan standar A2-B1. Lomba dilaksanakan secara
+                      daring melalui Zoom Meeting dan web Deutsche Woche XXIX.
+
                     </span>
                   </li>
                 </ul>
