--- a/lomba.html
+++ b/lomba.html
@@ -143,7 +143,7 @@
               </div>
               <div class="col col-lg-5">
                 <div class="image_widget page_banner_image">
-                  <img src="assets/images/lomba/Juklak NL Siswa .png" alt="Collab – Online Learning Platform">
+                  <img src="assets/images/lomba/lomba1.png" alt="Collab – Online Learning Platform">
                 </div>
               </div>
             </div>
@@ -169,7 +169,10 @@
                   <li>
                     <i class="fas fa-check"></i>
                     <span>
-                      Kompetisi membaca berita dalam bahasa Jerman untuk siswa SMA/SMK sederajat.
+                      Nachrichten Lesen merupakan lomba membaca berita. Teks berita tersebut sudah disediakan oleh
+                      panitia. Lomba dilaksanakan secara luring di Gedung T1 Fakultas Bahasa dan Seni Universitas Negeri
+                      Surabaya.
+
                     </span>
 
                   </li>
