--- a/lomba1.html
+++ b/lomba1.html
@@ -144,7 +144,7 @@
               </div>
               <div class="col col-lg-5">
                 <div class="image_widget page_banner_image">
-                  <img src="assets/images/lomba/Juklak DK Siswa .png" alt="Collab – Online Learning Platform">
+                  <img src="assets/images/lomba/lomba2.png" alt="Collab – Online Learning Platform">
                 </div>
               </div>
             </div>
@@ -170,7 +170,10 @@
                   <li>
                     <i class="fas fa-check"></i>
                     <span>
-                      Kompetisi membaca berita dalam bahasa Jerman untuk mahasiswa.
+                      Nachrichten Lesen merupakan lomba membaca teks berita. Peserta akan membacakan teks berita yang
+                      telah dipilih melalui web Deutsche Woche XXIX yang disediakan oleh panitia. Lomba dilaksanakan
+                      secara daring melalui Zoom Meeting.
+
                     </span>
                   </li>
                 </ul>
