--- a/lomba2.html
+++ b/lomba2.html
@@ -144,7 +144,7 @@
               </div>
               <div class="col col-lg-5">
                 <div class="image_widget page_banner_image">
-                  <img src="assets/images/lomba/Juklak ME Siswa .png" alt="Collab – Online Learning Platform">
+                  <img src="assets/images/lomba/lomba3.png" alt="Collab – Online Learning Platform">
                 </div>
               </div>
             </div>
@@ -170,7 +170,10 @@
                   <li>
                     <i class="fas fa-check"></i>
                     <span>
-                      Kompetisi bercerita dongeng dalam bahasa Jerman untuk siswa SMA/SMK sederajat.
+                      Märchen Erzählen merupakan lomba mendongeng dalam bahasa Jerman. Siswa akan memilih salah satu
+                      dongeng yang telah disediakan oleh panitia. Lomba dilakukan perorangan. Lomba akan dilaksanakan
+                      secara luring di Gedung T1 Fakultas Bahasa dan Seni Universitas Negeri Surabaya.
+
                     </span>
                   </li>
                 </ul>
