--- a/lomba3.html
+++ b/lomba3.html
@@ -144,7 +144,7 @@
               </div>
               <div class="col col-lg-5">
                 <div class="image_widget page_banner_image">
-                  <img src="assets/images/lomba/Juklak NL Mahasiswa .png" alt="Collab – Online Learning Platform">
+                  <img src="assets/images/lomba/lomba4.png" alt="Collab – Online Learning Platform">
                 </div>
               </div>
             </div>
@@ -170,7 +170,9 @@
                   <li>
                     <i class="fas fa-check"></i>
                     <span>
-                      Tes pengetahuan bahasa Jerman untuk siswa SMA/SMK sederajat.
+                      Deutschkenntnisse merupakan lomba yang bertujuan untuk menguji kemampuan dan pengetahuan siswa
+                      dalam berbahasa Jerman. Tingkat kesulitan dalam lomba ini menggunakan standar A1. Lomba
+                      dilaksanakan secara luring di Gedung T1 Fakultas Bahasa dan Seni Universitas Negeri Surabaya.
                     </span>
                   </li>
                 </ul>
