--- a/lomba5.html
+++ b/lomba5.html
@@ -144,7 +144,7 @@
               </div>
               <div class="col col-lg-5">
                 <div class="image_widget page_banner_image">
-                  <img src="assets/images/lomba/Juklak Singen Mahasiswa .png" alt="Collab – Online Learning Platform">
+                  <img src="assets/images/lomba/lomba6.png" alt="Collab – Online Learning Platform">
                 </div>
               </div>
             </div>
@@ -170,7 +170,9 @@
                   <li>
                     <i class="fas fa-check"></i>
                     <span>
-                      Kompetisi fotografi dengan tema budaya Jerman untuk umum.
+                      Lomba Fotografi merupakan lomba dokumentasi kegiatan Deutsche Woche XXIX. Peserta akan mengambil
+                      foto secara langsung selama kegiatan berlangsung. Foto hasil karya peserta akan dicetak dan
+                      dipajang oleh panitia, kemudian dinilai melalui sistem voting terbuka oleh pengunjung acara.
                     </span>
                   </li>
                 </ul>
