--- a/index_2.html
+++ b/index_2.html
@@ -284,7 +284,7 @@
         <div class="intro_video">
           <div class="video_wrap tilt">
             <img src="assets/images/video/jpg.jpg" alt="Collab – Online Learning Platform">
-            <a class="video_play_btn popup_video" href="https://drive.google.com/file/d/1fF6Uplu-YpdetR13Hc_CNV7ZaxBizDg7/view?usp=drive_link">
+            <a class="video_play_btn popup_video" href="assets/images/video/unesafiks.mp4">
               <span class="icon"><i class="fas fa-play"></i></span>
             </a>
           </div>
