--- a/lomba6.html
+++ b/lomba6.html
@@ -223,7 +223,7 @@
                     </li>
                     <li>
                       <i class="fas fa-square"></i>
-                      <span>Puncak DW XXVII</span>
+                      <span>Puncak DW XXIX</span>
                     </li>
                   </ul>
                 </div>
