--- a/index_2.html
+++ b/index_2.html
@@ -282,14 +282,16 @@
           </h2>
         </div>
         <div class="intro_video">
-          <div class="video_wrap tilt">
-            <img src="assets/images/video/jpg.jpg" alt="Collab – Online Learning Platform">
-            <a class="video_play_btn popup_video" href="assets/images/video/unesafiks.mp4">
-              <span class="icon"><i class="fas fa-play"></i></span>
-            </a>
+          <div class="video_wrap tilt"
+            style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 15px;">
+            <iframe src="https://drive.google.com/file/d/1fF6Uplu-YpdetR13Hc_CNV7ZaxBizDg7/preview" width="100%"
+              height="100%" style="position: absolute; top:0; left:0; width:100%; height:100%; border:0;"
+              allow="autoplay">
+            </iframe>
           </div>
         </div>
         <div class="row">
+
 
           <div class="col col-lg-3 col-md-6 col-sm-6">
             <div class="iconbox_item">
