--- a/semualomba.html
+++ b/semualomba.html
@@ -114,7 +114,7 @@
               </div>
               <div class="col col-lg-5">
                 <div class="image_widget page_banner_image">
-                  <img src="assets/images/lomba/image.png" alt="Collab – Online Learning Platform">
+                  <img src="assets/images/lomba/lombabaru.jpg" alt="Collab – Online Learning Platform">
                 </div>
               </div>
             </div>
