--- a/index_2.html
+++ b/index_2.html
@@ -662,7 +662,8 @@
                 </div>
                 <div class="item_content">
                   <h3 class="item_title">Reach Us</h3>
-                  <p class="mb-0"> Jl. Raya Kampus Unesa, Lidah Wetan, Kec. Lakarsantri, Surabaya, Jawa Timur </p>
+                  <p class="mb-0"> Universitas Negeri Surabaya, Lidah Wetan, Kec. Lakarsantri,
+                    Surabaya, Jawa Timur 60213 </p>
 
                 </div>
               </div>
@@ -671,9 +672,10 @@
           <div class="col col-lg-7">
             <div class="gmap_canvas">
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1176.5610290931688!2d112.66871985842607!3d-7.301673835510472!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7fd7f3fc45a97%3A0x95e7e96e5b13749!2sGedung%20T2%20Fakultas%20Bahasa%20dan%20Seni%20UNESA!5e0!3m2!1sid!2sid!4v1723943119111!5m2!1sid!2sid"
-                width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.477814585599!2d112.67008220000001!3d-7.300090899999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7fdb1f1ddf929%3A0x7f4924e4f3d88db4!2sGedung%20Pertunjukan%20Sawunggaling%20Universitas%20Negeri%20Surabaya!5e0!3m2!1sid!2sid!4v1757214880433!5m2!1sid!2sid"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>"
+             </iframe>
             </div>
           </div>
 
