--- a/index_2.html
+++ b/index_2.html
@@ -539,7 +539,7 @@
                   aria-expanded="true">
                   Topik/Tema yang diangkat oleh Deutsche Woche XXIX kali ini?
                 </div>
-                <div id="collapse_one" class="accordion-collapse collapse show" data-bs-parent="#faq_accordion_1">
+                <div id="collapse_one" class="accordion-collapse collapse" data-bs-parent="#faq_accordion_1">
                   <div class="accordion-body">
                     <p class="mb-0">
                       "Brücke der Sprache, Bühne der Kreativität" yang berarti "Jembatan Bahasa, Panggung Kreativitas"
