--- a/lomba.html
+++ b/lomba.html
@@ -131,7 +131,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="https://drive.google.com/file/d/1Qkr6W-8Upby7JrpwZSLAn77Of71Fcths/view?usp=sharing"
+                    <a href=""
                       class="btn btn_dark">
                       <span>
                         <small>Syarat dan Ketentuan</small>
@@ -170,9 +170,8 @@
                     <i class="fas fa-check"></i>
                     <span>
                       Nachrichten Lesen merupakan lomba membaca berita. Teks berita tersebut sudah disediakan oleh
-                      panitia. Lomba dilaksanakan secara luring di Gedung T1 Fakultas Bahasa dan Seni Universitas Negeri
+                      panitia. Lomba dilaksanakan secara luring di Gedung Q1 Fakultas Psikologi Universitas Negeri
                       Surabaya.
-
                     </span>
 
                   </li>
