--- a/lomba2.html
+++ b/lomba2.html
@@ -132,7 +132,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="https://drive.google.com/file/d/1FLjFU8gcXQfzz7WEIXFnT5ZzH8xHqiga/view?usp=sharing"
+                    <a href="-"
                       class="btn btn_dark">
                       <span>
                         <small>Syarat dan Ketentuan</small>
@@ -172,8 +172,7 @@
                     <span>
                       Märchen Erzählen merupakan lomba mendongeng dalam bahasa Jerman. Siswa akan memilih salah satu
                       dongeng yang telah disediakan oleh panitia. Lomba dilakukan perorangan. Lomba akan dilaksanakan
-                      secara luring di Gedung T1 Fakultas Bahasa dan Seni Universitas Negeri Surabaya.
-
+                      secara luring di Gedung Graha Sawunggaling Universitas Negeri Surabaya.
                     </span>
                   </li>
                 </ul>
