--- a/lomba3.html
+++ b/lomba3.html
@@ -132,7 +132,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="https://drive.google.com/file/d/1oaT0655YUoh14hfPxvA8x2zm2CivNdlf/view?usp=sharing"
+                    <a href=""
                       class="btn btn_dark">
                       <span>
                         <small>Syarat dan Ketentuan</small>
@@ -172,7 +172,7 @@
                     <span>
                       Deutschkenntnisse merupakan lomba yang bertujuan untuk menguji kemampuan dan pengetahuan siswa
                       dalam berbahasa Jerman. Tingkat kesulitan dalam lomba ini menggunakan standar A1. Lomba
-                      dilaksanakan secara luring di Gedung T1 Fakultas Bahasa dan Seni Universitas Negeri Surabaya.
+                      dilaksanakan secara luring di Gedung Q1 Fakultas Psikologi Universitas Negeri Surabaya.
                     </span>
                   </li>
                 </ul>
