--- a/lomba4.html
+++ b/lomba4.html
@@ -132,7 +132,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="https://drive.google.com/file/d/1bYWRX6Y5mhHYujt1R-BNCAkh5U77N3jH/view?usp=sharing"
+                    <a href=""
                       class="btn btn_dark">
                       <span>
                         <small>Syarat dan Ketentuan</small>
@@ -173,7 +173,6 @@
                       Deutschkenntnisse merupakan lomba yang bertujuan untuk menguji kemampuan dan siswa dalam berbahasa
                       Jerman. Tingkat kesulitan dalam lomba ini menggunakan standar A2-B1. Lomba dilaksanakan secara
                       daring melalui Zoom Meeting dan web Deutsche Woche XXIX.
-
                     </span>
                   </li>
                 </ul>
