--- a/lomba5.html
+++ b/lomba5.html
@@ -132,7 +132,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="https://drive.google.com/file/d/1rnyjkQasCpz7NxI2pVKhxr5SMmvVhKWZ/view?usp=sharing"
+                    <a href=""
                       class="btn btn_dark">
                       <span>
                         <small>Syarat dan Ketentuan</small>
@@ -172,7 +172,8 @@
                     <span>
                       Lomba Fotografi merupakan lomba dokumentasi kegiatan Deutsche Woche XXIX. Peserta akan mengambil
                       foto secara langsung selama kegiatan berlangsung. Foto hasil karya peserta akan dicetak dan
-                      dipajang oleh panitia, kemudian dinilai melalui sistem voting terbuka oleh pengunjung acara.
+                      dipajang oleh panitia,
+                      kemudian dinilai melalui sistem voting terbuka oleh pengunjung acara.
                     </span>
                   </li>
                 </ul>
