--- a/lomba1.html
+++ b/lomba1.html
@@ -132,7 +132,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="https://drive.google.com/file/d/1hWhLwoayyOKax9578FO1IibJuO1FGAof/view?usp=sharing"
+                    <a href=""
                       class="btn btn_dark">
                       <span>
                         <small>Syarat dan Ketentuan</small>
@@ -173,7 +173,6 @@
                       Nachrichten Lesen merupakan lomba membaca teks berita. Peserta akan membacakan teks berita yang
                       telah dipilih melalui web Deutsche Woche XXIX yang disediakan oleh panitia. Lomba dilaksanakan
                       secara daring melalui Zoom Meeting.
-
                     </span>
                   </li>
                 </ul>
